--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-NEXT_PUBLIC_GOOGLE_CLIENT_ID= '135828819654-4pmptslpiqdsgcf3naup88hkq82cog4p.apps.googleusercontent.com'
-NEXT_PUBLIC_GOOGLE_CLIENT_SECRET= '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'
-NEXT_PUBLIC_MONGODB_URI="mongodb+srv://kinut:Polarine001@cluster0.ihigr.mongodb.net/estore"
+NEXT_PUBLIC_GOOGLE_CLIENT_ID= '135828819654-dov1tb9q07mrm3sm6ge1js1eneskm1lr.apps.googleusercontent.com'
+NEXT_PUBLIC_GOOGLE_CLIENT_SECRET= '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'
+NEXT_PUBLIC_MONGODB_URI="mongodb+srv://kinut:Polarine001@cluster0.ihigr.mongodb.net/elektronics"
 NEXT_PUBLIC_NODE_ENV="development"
+NEXT_PUBLIC_SERVER_REMOTE="https://estore-backend-indol.vercel.app"
+NEXT_PUBLIC_SERVER_LOCAL="http://localhost:4000/graphql"
+NEXT_AUTH_SECRET="t+G9iDMdxLohuXCCDoZa/THViB0jKqWaHXkcqm3/HMI="
