--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
     "@mantine/core": "^6.0.13",
+    "@mantine/dates": "^6.0.17",
     "@mantine/hooks": "^6.0.13",
     "@mantine/modals": "^6.0.13",
     "@mantine/next": "^6.0.13",
@@ -21,6 +22,7 @@
     "@next/font": "^13.4.4",
     "@tabler/icons": "^1.119.0",
     "algoliasearch": "^4.17.2",
+    "axios": "^1.4.0",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
     "eslint": "8.31.0",
@@ -31,6 +33,7 @@
     "mongodb": "^4.6.0",
     "next": "13.1.1",
     "next-auth": "^4.22.1",
+    "next-connect": "^1.0.0",
     "next-urql": "^5.0.1",
     "query-string": "^8.1.0",
     "react": "18.2.0",
@@ -38,6 +41,10 @@
     "react-instantsearch-hooks-web": "^6.45.0",
     "react-is": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-svg-spinner": "^1.0.4",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
+    "unirest": "^0.6.0",
     "urql": "^4.0.2"
   },
   "devDependencies": {
